==============
lxml changelog
==============

Under development
=================

Features added
--------------

* Extended slicing of Elements  as in ``element[1:-1:2]``

* Resolvers can now provide a ``base_url`` keyword argument when
  resolving a document as string data.

* When using ``lxml.doctestcompare`` you can give the doctest option
  ``NOPARSE_MARKUP`` (like ``# doctest: +NOPARSE_MARKUP``) to suppress
  the special checking for one test.

* ``lxml.html.clean.Cleaner`` now allows for a ``host_whitelist``, and
  two overridable methods: ``allow_embedded_url(el, url)`` and the
  more general ``allow_element(el)``.

Bugs fixed
----------

* Using custom resolvers on XSLT stylesheets parsed from a string
  could request ill-formed URLs.

* lxml.etree could crash when adding more than 10000 namespaces to a
  document

* With ``lxml.doctestcompare`` if you do ``<tag xmlns="...">`` in your
  output, it will then be namespace-neutral (before the ellipsis was
  treated as a real namespace).

* In the ``lxml.html`` ``iter_links`` method, links in ``<object>``
  tags weren't recognized.  (Note: plugin-specific link parameters
  still aren't recognized.)  Also, the ``<embed>`` tag, though not
  standard, is now included in
  ``lxml.html.defs.special_inline_tags``.

Other changes
-------------

* The module source files were renamed to "lxml.*.pyx", such as
  "lxml.etree.pyx".  This was changed for consistency with the way
  Pyrex commonly handles package imports.  The main effect is that
  classes now know about their fully qualified class name, including
  the package name of their module.


2.0alpha4 (2007-10-07)
======================

Features added
--------------

Bugs fixed
----------

* AttributeError in feed parser on parse errors

Other changes
-------------

* Tag name validation in lxml.etree (and lxml.html) now distinguishes
  between HTML tags and XML tags based on the parser that was used to